--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,9 @@ dotenvy = "0.15.7"
 either = "1.15.0"
 image = "0.25.8"
 plotters = "0.3.7"
-# fork for components v2 support
-poise = { git = "https://github.com/BossFlea/poise.git", branch = "serenity-next" }
+# branch with components v2 support
+poise = { git = "https://github.com/serenity-rs/poise.git", branch = "serenity-next" }
+serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "next", features = ["unstable"] }
 rand = "0.9.2"
 regex = "1.12.2"
 reqwest = "0.12.23"
